fixed and this is numbus font size on mobile, was too small before

--- a/styles/index.css
+++ b/styles/index.css
@@ -529,7 +529,7 @@ a {
     }
     
     .this-is-kitten {
-        font-size: 10px;
+        font-size: 25px;
     }
     
     .CBD {
